working on responsive design

--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -30,70 +30,84 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1932" [imgSrc]="'../../../assets/original/img_2.jpeg'">
-            <img src="../../../assets/thumbs/img_2.jpeg" />
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_11.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_11.jpeg" />
           </ngx-floating-img>
         </div>
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/original/img_12.jpeg'">
-            <img src="../../../assets/thumbs/img_12.jpeg" />
-          </ngx-floating-img>
-        </div>
-      </div>
-      
-      <div class="img-wrapper">
-        <div>
-          <ngx-floating-img [imgWidth]="2000" [imgHeight]="1496" [imgSrc]="'../../../assets/original/img_10.jpg'">
-            <img src="../../../assets/thumbs/img_10.jpeg" />
-          </ngx-floating-img>
-        </div> 
-        <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1600" [imgSrc]="'../../../assets/original/img_13.jpeg'">
-            <img src="../../../assets/thumbs/img_13.jpeg" />
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_18.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_18.jpeg" />
           </ngx-floating-img>
         </div>
       </div>
       
       <div class="img-wrapper">
         <div>
-            <ngx-floating-img [imgWidth]="1239" [imgHeight]="1800" [imgSrc]="'../../../assets/original/img_7.jpg'">
-            <img src="../../../assets/thumbs/img_7.jpeg" />
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_8.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_8.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="799" [imgSrc]="'../../../assets/original/img_11.jpeg'">
-            <img src="../../../assets/thumbs/img_11.jpeg" />
-          </ngx-floating-img>
-        </div> 
-      </div>
-      
-      <div class="img-wrapper">
-        <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1440" [imgSrc]="'../../../assets/original/img_22.jpeg'">
-            <img src="../../../assets/thumbs/img_22.jpeg" />
-          </ngx-floating-img>
-        </div> 
-        <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1600" [imgSrc]="'../../../assets/original/img_23.jpeg'">
-            <img src="../../../assets/thumbs/img_23.jpeg" />
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_24.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_24.jpeg" />
           </ngx-floating-img>
         </div>
       </div>
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/original/img_20.jpeg'">
-            <img src="../../../assets/thumbs/img_20.jpeg" />
-          </ngx-floating-img>
+            <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_5.jpeg'">
+              <img src="../../../assets/examples/thumbs/img_5.jpeg" />
+            </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="857" [imgSrc]="'../../../assets/original/img_19.jpeg'">
-            <img src="../../../assets/thumbs/img_19.jpeg" />
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_2.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_2.jpeg" />
           </ngx-floating-img>
         </div> 
       </div>
+      
+      <div class="img-wrapper">
+        <div>
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_3.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_3.jpeg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_19.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_19.jpeg" />
+          </ngx-floating-img>
+        </div>
+      </div>
+      
+      <div class="img-wrapper">
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_20.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_20.jpeg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_1.jpg'">
+            <img src="../../../assets/examples/thumbs/img_1.jpg" />
+          </ngx-floating-img>
+        </div>
+      </div>
+
+      <div class="img-wrapper">
+        <div>
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_13.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_13.jpeg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_17.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_17.jpeg" />
+          </ngx-floating-img>
+        </div> 
+      </div>
+
       <div class="more-info-wrapper">
-        <p>This example show multiple options can be applied to ngx-floating-img component, <a routerLink="/examples">see all examples</a>
+        <p>This example shows multiple options can be applied to ngx-floating-img component, <a routerLink="/examples">see all examples</a>
         </p>        
       </div>
     </fit-section>
