--- a/projects/ngx-floating-img-tester/src/styles/_variables.scss
+++ b/projects/ngx-floating-img-tester/src/styles/_variables.scss
@@ -15,6 +15,9 @@ $main-padding: rem(20);
 $main-large-padding: rem(40);
 $main-radius: rem(4);
 
+$max-main-wrapper-width: 1200px;
+$min-main-wrapper-width: 320px;
+
 $header-height: 58px;
 $header-border-height: 5px;
 
