--- a/projects/ngx-floating-img-tester/src/app/common/header/header.component.html
+++ b/projects/ngx-floating-img-tester/src/app/common/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="header-container" fitMainWrapper>
+    <div class="header-container" fitMainWrapper [ngClass]="{'mobile-menu-visible': isMobileMenuOpen}">
       <div id="main-logo-container"><a routerLink="/home">NGX-FLOATING-IMG</a></div>
       <div id="main-nav-bar-container">
         <nav>
@@ -10,5 +10,9 @@
           </ul>
         </nav>
       </div>
+      <button id="menu-button" (click)="toggleMenuView()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M4 15h16v-2H4v2zm0 4h16v-2H4v2zm0-8h16V9H4v2zm0-6v2h16V5H4z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>
+        <span>&#x2715;</span>
+      </button>
     </div>
 </header>
