--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -17,9 +17,8 @@
                 <pre><code>NgxFloatingImgModule.forRoot()</code></pre>
               </li>
               <li>
-                <p>Add it in your template file</p>
-                <code>&lt;ngx-floating-img ...[ ]... &gt;
-                  &lt;ngx-floating-img&gt;</code>
+                <p>Add ngx-floating-img in your template file</p>
+                <code>&lt;ngx-floating-img&gt;&lt;/ngx-floating-img&gt;</code>
               </li>
             </ul>
           </div>
@@ -35,8 +34,8 @@
           </ngx-floating-img>
         </div>
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_18.jpeg'">
-            <img src="../../../assets/examples/thumbs/img_18.jpeg" />
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_13.jpeg'">
+            <img src="../../../assets/examples/thumbs/img_13.jpeg" />
           </ngx-floating-img>
         </div>
       </div>
@@ -93,18 +92,14 @@
         </div>
       </div>
 
-      <div class="img-wrapper">
-        <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_13.jpeg'">
-            <img src="../../../assets/examples/thumbs/img_13.jpeg" />
-          </ngx-floating-img>
-        </div> 
+      <!-- <div class="img-wrapper">
+         
         <div>
           <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_17.jpeg'">
             <img src="../../../assets/examples/thumbs/img_17.jpeg" />
           </ngx-floating-img>
         </div> 
-      </div>
+      </div> -->
 
       <div class="more-info-wrapper">
         <p>This example shows multiple options can be applied to ngx-floating-img component, <a routerLink="/examples">see all examples</a>
